Необходимое исправление механизма выдачи токенов
